--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MusicPlayerPro</string>
-    <string name="title_home">Home</string>
+    <string name="app_name">MusicG</string>
+    <string name="title_musics">Musics</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="shr_filter_title">Filter</string>
