--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MusicG</string>
     <string name="title_musics">Musics</string>
-    <string name="title_album">Album</string>
+    <string name="title_player">Player</string>
     <string name="title_information">Information</string>
     <string name="shr_filter_title">Filter</string>
     <string name="shr_search_title">Search</string>
